--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
-MONGODB_URI=mongodb+srv://isuruGayshan:Msipc%401234@busseason.prvlpzv.mongodb.net/bus_season?retryWrites=true&w=majority&appName=busSeason
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWN0aXZlLWRpbm9zYXVyLTQzLmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_fhcu3Wb4I8yxVypzG3pjUc1L6rr1wcj3EcPDrjjPJT
+MONGODB_URI=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
