update some ui changes and add some codes

--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,12 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files
-
+.env.local
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# clerk configuration (can include secrets)
+/.clerk/
